[package]
name = "war3_tui"
version = "0.1.0"
authors = ["ling"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
crossterm = "0.19.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
lazy_static = "1.4.0"
urlencoding = "1.1.1"
anyhow = "1.0.40"